# Closure-SDK

./: .gitignore  CLOSURE_APPLICATIONS.md  CLOSURE_SDK.md  GEOMETRIC_CLOSURE_PAPER.md  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  test.yml
benchmarks/: benchmark_sdk.py  demo_operations.py  demo_stream.py
benchmarks/outputs/: benchmark_sdk.txt  demo_operations.txt  demo_stream.txt
brahman/: BRAHMAN.md  DRAWING_BOARD.md  model.py  train.py  train_pure.py
brahman/visual/: BRAHMAN_VISUAL.md  __init__.py  data.py  train.py
closure_cli/: identity.py
closure_dna/: CLOSURE_DNA.md  README.md  database.py  pyproject.toml  table.py  web.py
closure_dna/benchmarks/: bench_dna.py
closure_dna/rust/src/: table.rs
closure_dna/tests/: test_demo.py  test_table.py
closure_ea/: EA_STRICT_THEORY_REFACTOR.md  README.md  __init__.py  __main__.py
closure_ea/archive/legacy_runtime/: __init__.py  cell.py
closure_ea/dna/: CLOSURE_DNA.md  README.md  database.py  table.py  web.py
closure_ea/dna/benchmarks/: bench_dna.py  benchmark_100k.txt
closure_ea/dna/demo/: README.md  registry.py
closure_ea/dna/tests/: conftest.py  test_cli.py  test_database.py  test_demo.py  test_dna_features.py  test_dna_rigorous.py  test_repl.py  test_sql.py  test_table.py
closure_ea/examples/: exp_arithmetic.rs  exp_associative_memory.rs  exp_bkt_phase_transition.rs  exp_collatz.rs  exp_fiber_memory.rs  exp_fractran.rs  exp_neuromodulated_learning.rs  exp_prime_resonance.rs  exp_riemann_zeros.rs  exp_su2_gates.rs  exp_turing.rs  gol_live.rs  gray_game_live.rs
closure_ea/rust/src/: trinity.rs
closure_ea/vm/: Cargo.toml  SPEC.md  geometric_closure.tex
closure_ea/vm/src/: hierarchy.rs  (+4 more)
closure_sdk/: __init__.py  canon.py  lenses.py  pyproject.toml  state.py  valence.py
closure_sdk/tests/: test_gilgamesh.py  test_resonance.py  test_sdk.py
docs/: about.html  collaborate.html  demo.html  enkidu.html  experiments.html  gallery.html  generate_code_traces.py  horizon-webgl.js  horizon.html  index.html  learning.html  newsletter.html  origin.html  seeing-code-trace-piece2.json  seeing-code-trace-piece3.json  seeing-code-trace-piece4.json  seeing-code-trace.json  seeing-code.html  seeing-code.js  shatter.js  sphere.js  stack-panels.js  stack.html  storage.html  styles.css  support.html  supporting-models.html  verification.html
docs/codepen/: index.html
rust/: Cargo.toml
rust/src/: embed.rs  hopf.rs  lib.rs  path.rs  pyo3_bindings.rs  resonance.rs
tests/: test_bind.py  test_sdk.py  test_stream_classifier.py
(+174 files in other folders)
