[project]
name = "closure-sdk"
version = "1.0.0"
description = "A hash you can do algebra on — composable verification for ordered data over S³"
readme = "../README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Walter Henrique Alves da Silva", email = "walter.h057@gmail.com"}
]
keywords = ["verification", "integrity", "quaternion", "hash", "data-pipeline", "streaming", "cryptography"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/faltz009/Closure-SDK"
Repository = "https://github.com/faltz009/Closure-SDK"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../rust/Cargo.toml"
features = ["pyo3/extension-module"]
python-packages = ["closure_sdk", "closure_cli", "closure_rs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
